Start of fix towards https://bugs.webkit.org/show_bug.cgi?id=152556.