Source/WebCore/platform/graphics/mac/GraphicsContext3DMac.mm
@@ -342,7 +342,12 @@ GraphicsContext3D::~GraphicsContext3D()
 #if PLATFORM(IOS)
 bool GraphicsContext3D::setRenderbufferStorageFromDrawable(GC3Dsizei width, GC3Dsizei height)
 {
-    [m_webGLLayer setBounds:CGRectMake(0, 0, width, height)];
+#if PLATFORM(IOS)
+    [m_webGLLayer setBackingStoreSize:CGSizeMake(width, height)];
+#else
+    UNUSED_PARAM(width);
+    UNUSED_PARAM(height);
+#endif
     [m_webGLLayer setOpaque:(m_internalColorFormat != GL_RGBA8)];
 
     return [m_contextObj renderbufferStorage:GL_RENDERBUFFER fromDrawable:static_cast<id<EAGLDrawable>>(m_webGLLayer.get())];
